Diff: Fix jumping toolbar

--- a/github-dark.css
+++ b/github-dark.css
@@ -231,9 +231,10 @@
       top: 8px !important;
     }
   }
-  /* Disable uselss position:sticky on PR diffs */
-  .pr-toolbar {
+  /* HACK: Disable useless position:sticky on PR diffs */
+  .pr-toolbar.is-stuck {
     position: static !important;
+    margin-top: -20px !important;
   }
   /* HACK: Tweak issue reaction */
   .reaction-summary-item {
